--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,11 @@
   "name": "YouTube Nonstop",
   "version": "1.0.0",
   "description": "Automatically clicks the 'Yes' button on YouTube's auto-pause confirmation dialog.",
+  "icons": {
+    "16": "./images/icon16.png",
+    "48": "./images/icon48.png",
+    "128": "./images/icon128.png"
+  },
   "content_scripts": [
     {
       "matches": ["*://www.youtube.com/*"],
